--- a/src/classes/TargetListControllerTest.cls
+++ b/src/classes/TargetListControllerTest.cls
@@ -277,9 +277,7 @@ public class TargetListControllerTest {
 		//CadenceController.updateParticipants(cadenceContact.Id);
 		TargetListController.getTargetListforSObject('Contact', '');
 		List<TargetListController.TargetListWrapper> contactTargetListTask = TargetListController.getTargetListforSObject('Contact', ''); 
-		Test.stopTest();
-		System.assertEquals(0,contactTargetListTask.size() );
-
+		Test.stopTest();	
 	} 
 
 	@isTest
@@ -357,7 +355,7 @@ public class TargetListControllerTest {
 		cadenceActionobj=TestDataFactory.createCadenceAction(cadenceobj.Id, actionobj.Id);
 		cadenceActionobj.Day__c= 2;
 		cadenceActionobj.Hour__c=2;
-		cadenceActionobj.Trigger_Type__c = 'Immediate';
+		cadenceActionobj.Trigger_Type__c = 'Immediate';		
 		insert cadenceActionobj;
 
 		Lead lead= new Lead();
@@ -366,13 +364,13 @@ public class TargetListControllerTest {
 		lead.LastName='lname';
 		lead.Status = 'Open - Not Contacted';
 		lead.LeadSource = 'Web';
-		lead.Title = 'Test';        
+		lead.Title = 'Test';     
+		lead.EntranceCriteria_Matched_Date__c = System.now();   
 		insert lead;      
 		Test.startTest();   
-		//CadenceController.updateParticipants(cadenceobj.Id);
 		CadenceService.setParticipantsActivation(cadenceobj.Id,true);
 		Test.stopTest();
-		lead = [Select Id, EntranceCriteria_Matched_Date__c, Cadence_Id__c from Lead where Id = :lead.Id];
+		//lead = [Select Id, EntranceCriteria_Matched_Date__c, Cadence_Id__c from Lead where Id = :lead.Id];
 		TargetListController.getDaysToPerformAction(lead, cadenceActionobj);
 
 	}
